--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=I_TIA
+name=E-Lagori-TransImpedance-Amplifier
 version=1.0.0
 author=Anish Bekal <anish.bekal@e-lagori.com>
 maintainer=Errol Joshua <errol@tinyprismlabs.com>
